package br.com.sga.pessoal;

public class Aluno extends Pessoa {
     
}
