package br.com.sga.pessoal;

public class Sexo {
     
}
